tests/success/move_reference_access.bz
struct resource_t
{
	.i: int32;

	destructor(&self)
	{
	}

	constructor(i: int32)
	{
		return resource_t[ i ];
	}

	constructor(other: &resource_t)
	{
		return resource_t[ other.i ];
	}
}

function func(r: move resource_t) -> int32
{
	return r.i;
}

function main()
{
	(consteval {
		let _ = func(resource_t(123));
	});
	let _ = func(resource_t(123));
}
