tests/error/type_match/base_case_tuple_mismatched_elem_type1.bz
function test()
{
	let _: [int32, float64, str] = [int64, float64, str]();
}
